# Tubes1_DAI

./: CMakeLists.txt  Dockerfile  README.md
.cache/clangd/index/: GLWidget.cpp.71E988E236A7933F.idx  GLWidget.h.B3D1186163496724.idx  MainWindow.cpp.FF081E1283C71889.idx  MainWindow.h.7A09422ACD9D6D99.idx  cube.cpp.DD889E2E8707CC93.idx  cube.hpp.028087B37CA3450D.idx  genetic_algorithm.cpp.58E4C37218D7AA90.idx  genetic_algorithm.hpp.91F53740904B99B5.idx  main.cpp.74A16446828539E7.idx  matplotlibcpp.h.55E4D4FBFD5FF6E9.idx  random_restart.cpp.6612C67973B45529.idx  random_restart.hpp.E683FCD998D43397.idx  side_ways.cpp.38F68C508EBE8B7D.idx  side_ways.hpp.4DAD64F3FF787DCB.idx  simulated_annealing.cpp.C10E3463B89B3319.idx  simulated_annealing.hpp.D5C8817C4A62FA48.idx  steep_ascent.cpp.4D1105E97B6E02AF.idx  steep_ascent.hpp.8C860E9F42C0D7E5.idx  stochastic.cpp.EC3749126824B4BA.idx  stochastic.hpp.638339E5A5713C7D.idx
include/: GLWidget.h  MainWindow.h  cube.hpp  genetic_algorithm.hpp  random_restart.hpp  steep_ascent.hpp
src/: GLWidget.cpp  MainWindow.cpp  cube.cpp  genetic_algorithm.cpp  main.cpp  random_restart.cpp  side_ways.cpp  simulated_annealing.cpp  steep_ascent.cpp  stochastic.cpp
